syntax = "proto3";

package messages;

option go_package = "/";

service MessageService {
  rpc StartSession(Session) returns (Empty);
  rpc StopSession(Session) returns (Empty);
  rpc SendText (TextMessageRequest) returns (MessageResponse);
}

service EventStream {
  rpc StreamEvents(Empty) returns (stream EventJson);
}

message Empty {}

message EventJson {
  string event = 1;
  string data = 2;
}

message Session {
  string id = 1;
}

message TextMessageRequest {
  Session session = 1;
  string jid = 2;
  string text = 3;
}

message MessageResponse {
  string id = 1;
  int64 timestamp = 2;
}